--- a/starbucks website clone/index.html
+++ b/starbucks website clone/index.html
@@ -113,6 +113,9 @@
             background-color: white;
             color: var(--primary-color);
         }
+        .items ::after{
+            opacity: 0.4;
+        }
 
         .items {
             display: flex;
@@ -120,6 +123,9 @@
             height: 400px;
             align-items: center;
             justify-content: space-evenly;
+            background-image: url('landscape.jpg') ;
+            
+            background-size: 100% 100%;
         }
 
         .h-1 {
